package app.domain.shared;

import app.domain.model.Client;

import java.util.ArrayList;
import java.util.List;

public interface ListOfClients {
    List<Client> clientList = new ArrayList<>();
}
