package app.domain.shared;

import app.domain.model.Results;

import java.util.ArrayList;
import java.util.List;

public interface ListOfResults {
    List<Results> resultsList = new ArrayList<>();
}
