package app.domain.shared;

import app.domain.model.ParameterCategory;

import java.util.ArrayList;
import java.util.List;

public interface ListaCategorias {
    List<ParameterCategory> listacategorias = new ArrayList<ParameterCategory>();
}